refact: script do swagger
